--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -74,22 +74,30 @@
                                     <constraint firstAttribute="width" constant="100" id="Qvg-o4-yIo"/>
                                     <constraint firstAttribute="height" constant="50" id="cdf-Dw-xxG"/>
                                 </constraints>
-                                <state key="normal" title="Start"/>
+                                <state key="normal" title="startGame"/>
                                 <connections>
                                     <action selector="startAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eqO-lN-WcP"/>
                                 </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dq0-ir-xHq">
+                                <rect key="frame" x="157" y="373" width="100" height="50"/>
+                                <state key="normal" title="startRound"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="POC-yC-rnR" firstAttribute="top" secondItem="n4n-2L-7up" secondAttribute="bottom" constant="20" id="27s-Y8-sQh"/>
+                            <constraint firstItem="dq0-ir-xHq" firstAttribute="width" secondItem="POC-yC-rnR" secondAttribute="width" id="F3e-iz-aHK"/>
+                            <constraint firstItem="dq0-ir-xHq" firstAttribute="height" secondItem="POC-yC-rnR" secondAttribute="height" id="GKB-st-oDv"/>
                             <constraint firstItem="n4n-2L-7up" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="HSI-ye-wv6"/>
                             <constraint firstItem="POC-yC-rnR" firstAttribute="centerX" secondItem="n4n-2L-7up" secondAttribute="centerX" id="IaF-CG-Wv6"/>
                             <constraint firstItem="FFW-ng-P64" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ihp-Oc-mZz"/>
                             <constraint firstItem="FFW-ng-P64" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Imz-n5-Vf3"/>
+                            <constraint firstItem="dq0-ir-xHq" firstAttribute="centerX" secondItem="n4n-2L-7up" secondAttribute="centerX" id="Q0w-F5-sm3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Svh-WB-NDC" secondAttribute="trailing" id="Rcu-LS-I0D"/>
                             <constraint firstItem="qZm-kd-x0X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TnZ-bw-lYT"/>
                             <constraint firstItem="Svh-WB-NDC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Vo7-V2-2Ue"/>
+                            <constraint firstItem="n4n-2L-7up" firstAttribute="top" secondItem="dq0-ir-xHq" secondAttribute="bottom" constant="20" id="bTA-8j-TCQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uYI-Dj-XWX" secondAttribute="trailing" id="esX-EK-Rsz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qZm-kd-x0X" secondAttribute="bottom" id="lLh-iz-iAh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="n4n-2L-7up" secondAttribute="trailing" constant="20" id="qso-9J-1jW"/>
