--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cml-5X-RFz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="315.94202898550725" y="109.82142857142857"/>
+            <point key="canvasLocation" x="361" y="110"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="11a-Ez-w9r">
@@ -92,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bUl-5k-iFk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1024.6376811594205" y="109.82142857142857"/>
+            <point key="canvasLocation" x="1064" y="110"/>
         </scene>
         <!--Two Players View Controller-->
         <scene sceneID="ILw-Gs-toC">
@@ -126,12 +126,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vLI-Sa-IiG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2180" y="-449"/>
+            <point key="canvasLocation" x="1838" y="-210"/>
         </scene>
-        <!--View Controller-->
+        <!--Three Players View Controller-->
         <scene sceneID="lkh-OP-r7j">
             <objects>
-                <viewController id="eTN-ZF-Sxj" sceneMemberID="viewController">
+                <viewController id="eTN-ZF-Sxj" customClass="ThreePlayersViewController" customModule="fourCorners" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OMB-Vo-O6v">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -165,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ef7-1A-2o7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2857" y="-43"/>
+            <point key="canvasLocation" x="2552" y="110"/>
         </scene>
         <!--Four Players View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -274,7 +274,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2162" y="542"/>
+            <point key="canvasLocation" x="1838" y="468"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sAc-46-UGB">
