--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -82,6 +82,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dq0-ir-xHq">
                                 <rect key="frame" x="157" y="373" width="100" height="50"/>
                                 <state key="normal" title="startRound"/>
+                                <connections>
+                                    <action selector="startRoundButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jbK-8F-FNR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -109,6 +112,7 @@
                     <connections>
                         <outlet property="promptLabel" destination="n4n-2L-7up" id="nBJ-BG-QX8"/>
                         <outlet property="startButton" destination="POC-yC-rnR" id="4fw-NO-B0Y"/>
+                        <outlet property="startRoundButton" destination="dq0-ir-xHq" id="hN6-sH-TBH"/>
                         <outletCollection property="collection" destination="FFW-ng-P64" collectionClass="NSMutableArray" id="tup-6R-nhY"/>
                         <outletCollection property="collection" destination="qZm-kd-x0X" collectionClass="NSMutableArray" id="RZP-Zs-gF6"/>
                         <outletCollection property="collection" destination="Svh-WB-NDC" collectionClass="NSMutableArray" id="qfe-Lt-8iS"/>
